fix left to right scroll

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -36,6 +36,7 @@
 	                	.push {
 					position: relative;
 					opacity: 0;
+					min-width: 100%;
 	                        	@include animation(push ease-out 27s 2s infinite forwards);
 	                	}
 	                }
