--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -16,9 +16,9 @@
 	font-size: calc(1.25em + 25%);
 	line-height: 44px;
 	line-height: calc(1.75em + 25%);
-	color: $color-light;
+	color: $color-grey;
 	overflow: hidden;
-	@include overlay($color-dark, 0.8);
+	@include overlay($color-light, 0.8);
 	.stack-1 {
 		z-index: 5;
 		position: absolute;
