add text shadow

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -9,6 +9,7 @@
 	height: 100vh;
 	margin: 0 auto;
 	text-align: center;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
 	text-transform: uppercase;
 	font-family: Lato;
 	font-weight: 100;
