--- a/assets/styles/partials/_ribbon.scss
+++ b/assets/styles/partials/_ribbon.scss
@@ -19,38 +19,41 @@
 		line-height: 1.6em;
 		z-index: 3;
 		
-		span {
+		.ribbon-number {
 			font-size: 40px;
 			font-family: Lato;
 			font-style: italic;
-			font-weight: 200;
+			font-weight: 100;
+			span {
+				font-size: 80px;
+			}
+		}
+
+		h2 {
+			font-size: 0.9em;
+			font-style: normal;
+			font-weight: 900;
+			text-transform: uppercase;
+			line-height: 1.3em;
+			color: $color-light;
+		}
+	
+		p {
+			font-size: 0.75em;
+			font-style: normal;
+			font-weight: 100;
+			text-transform: uppercase;
+			line-height: 1.5em;
+			color: $color-light;
 		}
 	}
 	
-	.ribbon-text h2 {
-		font-size: 0.9em;
-		font-style: normal;
-		font-weight: 900;
-		text-transform: uppercase;
-		line-height: 1.3em;
-		color: $color-light;
-	}
-	
-	.ribbon-text p {
-		font-size: 0.75em;
-		font-style: normal;
-		font-weight: 100;
-		text-transform: uppercase;
-		line-height: 1.5em;
-		color: $color-light;
-	}
-	
-	.ribbon-text a {
+	a {
 		text-decoration: none;
 		color: $color-grey;
 	}
 	
-	.ribbon-text img {
+	img {
 		float: left;
 	}
 }
