--- a/assets/styles/partials/_ribbon.scss
+++ b/assets/styles/partials/_ribbon.scss
@@ -24,9 +24,6 @@
 			font-family: Lato;
 			font-style: italic;
 			font-weight: 100;
-			span {
-				font-size: 80px;
-			}
 		}
 
 		h2 {
@@ -35,7 +32,7 @@
 			font-weight: 900;
 			text-transform: uppercase;
 			line-height: 1.3em;
-			color: $color-light;
+			color: $color-light-alpha;
 		}
 	
 		p {
@@ -44,7 +41,7 @@
 			font-weight: 100;
 			text-transform: uppercase;
 			line-height: 1.5em;
-			color: $color-light;
+			color: $color-light-alpha;
 		}
 	}
 	
