remove p element in front of number and make the number double the size of the p in the div juxatapose

--- a/assets/styles/partials/_ribbon.scss
+++ b/assets/styles/partials/_ribbon.scss
@@ -20,7 +20,7 @@
 		z-index: 3;
 		
 		.ribbon-number {
-			font-size: 40px;
+			font-size: 1.5em;
 			font-family: Lato;
 			font-style: italic;
 			font-weight: 100;
