--- a/assets/styles/partials/_ribbon.scss
+++ b/assets/styles/partials/_ribbon.scss
@@ -24,7 +24,7 @@
 			font-family: Lato;
 			font-style: italic;
 			font-weight: 100;
-			text-alight: right;
+			color: $color-grey;
 		}
 		@media (min-width: $mq-small) {
 			font-size: 1.55em;
@@ -32,7 +32,7 @@
 		}
 
 		h2 {
-			font-size: 1.25em;
+			font-size: 1.05em;
 			font-style: normal;
 			font-weight: 900;
 			text-transform: uppercase;
