--- a/assets/styles/partials/_ribbon.scss
+++ b/assets/styles/partials/_ribbon.scss
@@ -31,7 +31,7 @@
 			line-height: 1.25em;
 			color: $color-grey;
 			@media (min-width: $mq-small) {
-				font-size: 1.5em;
+				font-size: 2.5em;
 				line-height: 0.905em;
 			}
 		}
@@ -50,8 +50,8 @@
 		}
 	
 		p {
-			font-size: 0.55em;
-			font-style: normal;
+			font-size: 0.95em;
+			font-style: italic;
 			font-weight: 100;
 			text-transform: uppercase;
 			line-height: 1.5em;
