make the text just a little bigger

--- a/assets/styles/partials/_ribbon.scss
+++ b/assets/styles/partials/_ribbon.scss
@@ -29,10 +29,10 @@
 			font-style: italic;
 			font-weight: 100;
 			line-height: 1.25em;
-			color: $color-grey;
+			color: $color-yellow;
 			@media (min-width: $mq-small) {
-				font-size: 2.5em;
-				line-height: 0.905em;
+				font-size: 2.9em;
+				line-height: 0.995em;
 			}
 		}
 
