--- a/assets/styles/partials/_ribbon.scss
+++ b/assets/styles/partials/_ribbon.scss
@@ -18,7 +18,7 @@
 		font-size: 1.55em;
 		line-height: 1.5em;
 		z-index: 3;
-		@media (min-width: $mq-small) {
+		@media (min-width: $mq-large) {
 			font-size: 0.85em;
 			line-height: 1.5em;
 		}
@@ -30,7 +30,7 @@
 			font-weight: 100;
 			line-height: 1.25em;
 			color: $color-yellow;
-			@media (min-width: $mq-small) {
+			@media (min-width: $mq-large) {
 				font-size: 2.9em;
 				line-height: 0.995em;
 			}
@@ -43,7 +43,7 @@
 			text-transform: uppercase;
 			line-height: 1.55em;
 			color: $color-light-alpha;
-			@media (min-width: $mq-small) {
+			@media (min-width: $mq-large) {
 				font-size: 1.7em;
 				line-height: 1.85em;
 			}
@@ -56,7 +56,7 @@
 			text-transform: uppercase;
 			line-height: 1.5em;
 			color: $color-light-alpha;
-			@media (min-width: $mq-small) {
+			@media (min-width: $mq-large) {
 				font-size: 0.95em;
 				line-height: 1.5em;
 			}
