add some margin to the about section

--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -3,6 +3,7 @@
 -----------------------------------------------  */
 
 .section-about {
+	margin: 10em 0;
 	h1 { text-align: center; color: $color-blue; }
 	p { text-align: center; color: $color-grey; }
 }
