test animation on banner's yellow button

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -157,6 +157,8 @@
                 background-color: white;
                 border: 1px solid $color-orange;
                 color: $color-orange;
-
+		p {
+			@include animation(rubber-band ease-in-out 3s);
+		}
 	}
 }
