use higher z-index for banner's yellow button

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -132,6 +132,7 @@
 		}
 	}
 	.yellow-button {
+		z-index: 7;
 		@include animation(fade-in ease-in-out 1s 1s both);
 		position: relative;
 		display: table;
