add margins to rows in about section

--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -6,4 +6,5 @@
 	margin: 2em 0;
 	h1 { text-align: center; color: $color-blue; }
 	p { text-align: center; color: $color-grey; }
+	.row { margin: 2em 0 }
 }
