--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -4,20 +4,24 @@
 
 .section-about {
 	margin: 2em 0;
+
 	h1 { text-align: center; color: $color-blue; }
+
 	p { text-align: center; color: $color-grey; }
+
 	.row { margin: 2em 0 }
 	
         .program {
                 @include animation(fade-in ease-in-out 1s 1s both);
                 position: relative;
                 display: table;
+		margin: 0 auto;
                 border: 1px solid $color-dark;
                 border-radius: 50px;
                 background-color: $color-yellow;
                 background-image: linear-gradient(180deg,#fff 0,hsla(0,0%,100%,0));
-                width: 100px;
-                height: 100px;
+                width: 80%;
+                height: 80%;
                 transition: ease-out 0.5s;
                 p {
                         display: table-cell;
@@ -39,4 +43,17 @@
                 }
         }
 
+        .discover {
+		position: absolute;
+                background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/two-grills-940x600px.jpg);
+	}
+
+        .develop {
+	}
+
+        .deliver {
+	}
+
+        .sustain {
+	}
 }
