add some margin

--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -15,7 +15,7 @@
                 @include animation(fade-in ease-in-out 1s 1s both);
                 position: relative;
                 display: table;
-		margin: 0 auto;
+		margin: 1em auto;
                 border: 1px solid $color-dark;
                 border-radius: 50px;
                 background-color: $color-yellow;
