position underlay relatively

--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -43,7 +43,7 @@
         }
 
         .discover {
-		position: absolute;
+		position: relative;
                 background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/two-grills-940x600px.jpg);
 		z-index: -1;
 	}
