--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -17,7 +17,6 @@
                 display: table;
 		margin: 1em auto;
                 border: 1px solid $color-dark;
-                border-radius: 40%;
                 background-color: $color-yellow;
                 background-image: linear-gradient(180deg,#fff 0,hsla(0,0%,100%,0));
                 width: 80%;
@@ -47,6 +46,17 @@
                 background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/two-grills-940x600px.jpg);
 		z-index: -1;
 	}
+        &:after{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background: rgba($color-light, 0.5);
+        z-index: 0;
+        }
+
 
         .develop {
 	}
