--- a/assets/styles/partials/_ribbon.scss
+++ b/assets/styles/partials/_ribbon.scss
@@ -30,6 +30,7 @@
 			font-weight: 100;
 			line-height: 1.25em;
 			color: $color-yellow;
+			text-shadow: 1px 1px 1px rgba($color-yellow,0.1);
 			@media (min-width: $mq-large) {
 				font-size: 2.9em;
 				line-height: 0.995em;
