--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -47,7 +47,7 @@
 
         .discover {
 		position: relative;
-                background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/two-grills-940x600px.jpg);
+                background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/finger-in-mouth-940x600px.jpg);
 	        background-size: cover;
 	        background-repeat: no-repeat;
 	        background-position:    50%;
@@ -61,11 +61,26 @@
 
 
         .develop {
+		position: relative;
+                background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/two-grills-940x600px.jpg);
+	        background-size: cover;
+	        background-repeat: no-repeat;
+	        background-position:    50%;
 	}
 
         .deliver {
+		position: relative;
+                background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/two-grills-940x600px.jpg);
+	        background-size: cover;
+	        background-repeat: no-repeat;
+	        background-position:    50%;
 	}
 
         .sustain {
+		position: relative;
+                background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/take-a-shot-940x600px.jpg);
+	        background-size: cover;
+	        background-repeat: no-repeat;
+	        background-position:    50%;
 	}
 }
