--- a/assets/styles/partials/_ribbon.scss
+++ b/assets/styles/partials/_ribbon.scss
@@ -54,6 +54,7 @@
 			font-size: 0.55em;
 			font-style: italic;
 			font-weight: 100;
+			text-shadow: 1px 1px 1px rgba($color-light,0.5);
 			text-transform: uppercase;
 			line-height: 1.5em;
 			color: $color-light-alpha;
