--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -52,11 +52,15 @@
 	        background-repeat: no-repeat;
 	        background-position:    50%;
 	}
-        &:after{
+        .discover:after {
 	        content: '';
-	        position: relative;
+	        position: absolute;
+	        top: 0;
+	        left: 0;
 	        height: 100%;
 	        width: 100%;
+	        background: rgba($color-light, 0.5);
+	        z-index: 0;
         }
 
 
