add rose color to config... my rose is blood red b30000

--- a/assets/styles/partials/_config.scss
+++ b/assets/styles/partials/_config.scss
@@ -22,6 +22,7 @@ $color-beta: #7690A4;
 $color-alpha: #98DAEE;
 $color-light: #ffffff;
 $color-dark: #111111;
+$color-rose: #b30000; // hsl(0.00,1.00,0.35)
 $color-blue: #1f3a8c;
 $color-grey: #555555;
 $color-orange: #ff6600;
