--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -59,7 +59,7 @@
 	        left: 0;
 	        height: 100%;
 	        width: 100%;
-                background-image: linear-gradient(180deg,fff 0,hsla(0,0%,100%,0));
+	        background: rgba($color-light, 0.9);
 	        z-index: 0;
         }
 
