--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -18,7 +18,6 @@
 		margin: 1em auto;
 		text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
 		text-transform: uppercase;
-                border: 1px solid $color-dark;
                 background-image: linear-gradient(180deg,#fff 0,hsla(0,0%,100%,0));
                 width: 100%;
                 max-width: 960px;
@@ -52,13 +51,14 @@
 	        background-repeat: no-repeat;
 	        background-position:    50%;
 	}
-        .discover:after {
+        .discover::after {
 	        content: '';
 	        position: absolute;
 	        top: 0;
 	        left: 0;
 	        height: 100%;
 	        width: 100%;
+                border: 1px solid $color-dark;
                 background-image: linear-gradient(180deg,hsla(0,0%,100%,0) 0, $color-rose);
 	        z-index: 0;
         }
