--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -18,7 +18,6 @@
 		margin: 1em auto;
 		text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
 		text-transform: uppercase;
-                background-image: linear-gradient(180deg,#fff 0,hsla(0,0%,100%,0));
                 width: 100%;
                 max-width: 960px;
                 min-height: 300px;
@@ -51,7 +50,7 @@
 	        background-repeat: no-repeat;
 	        background-position:    50%;
 	}
-        .discover::after {
+        .discover:after {
 	        content: '';
 	        position: absolute;
 	        top: 0;
