--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -34,14 +34,6 @@
                         color: $color-dark;
                 }
         }
-        .program:hover {
-                background-color: white;
-                border: 1px solid $color-grey;
-                color: $color-grey;
-                p {
-                        @include animation(rubber-band ease-in-out 1s);
-                }
-        }
 
         .discover {
 		position: relative;
@@ -60,6 +52,14 @@
                 border: 1px solid $color-dark;
                 background-image: linear-gradient(180deg,hsla(0,0%,100%,0) 0, $color-rose);
 	        z-index: 0;
+        }
+        .program:hover:after {
+                background-color: $color-rose;
+                border: 1px solid $color-grey;
+                color: $color-grey;
+                p {
+                        @include animation(rubber-band ease-in-out 1s);
+                }
         }
 
 
