--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -53,7 +53,7 @@
                 background-image: linear-gradient(180deg,hsla(0,0%,100%,0) 0, $color-rose);
 	        z-index: 0;
         }
-        .program:hover:after {
+        .discover:hover:after, .discover:focus:after {
                 background-color: $color-rose;
                 border: 1px solid $color-grey;
                 color: $color-grey;
