--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -42,13 +42,13 @@
 	        height: 100%;
 	        width: 100%;
                 border: 1px solid $color-dark;
-                background-image: linear-gradient(180deg,hsla(0,0%,100%,0) 0, $color-rose);
+                background-image: linear-gradient(180deg,hsla(0,0%,100%,0) 0, rgba($color-rose, 0.5));
 	        z-index: 0;
         }
         .program:hover:after, .discover:focus:after {
-                background-color: $color-rose;
+                background-color: rgba($color-rose,0.5);
                 border: 1px solid $color-grey;
-                color: $color-grey;
+                color: $color-light;
                 p {
                         @include animation(rubber-band ease-in-out 1s);
                 }
