--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -23,6 +23,11 @@
                 min-height: 300px;
                 max-height: 600px;
                 transition: ease-out 0.5s;
+                p {
+                        display: table-cell;
+                        position: relative;
+                        vertical-align: middle;
+                }
         }
         .program:after {
 	        content: '';
@@ -31,19 +36,15 @@
 	        left: 0;
 	        height: 100%;
 	        width: 100%;
-                border: 1px solid $color-dark;
-                background-image: linear-gradient(180deg,hsla(0,0%,100%,0) 0, rgba($color-rose, 0.5));
-	        z-index: 0;
-                p {
-                        display: table-cell;
-                        position: relative;
-                        vertical-align: middle;
+		margin-top: 50%
                         font-family: Lato;
                         font-weight: 900;
                         font-size: 2em;
                         text-align: center;
-                        color: $color-dark;
-                }
+                        color: $color-light;
+                border: 1px solid $color-dark;
+                background-image: linear-gradient(180deg,hsla(0,0%,100%,0) 0, rgba($color-rose, 0.5));
+	        z-index: 0;
         }
         .program:hover:after, .discover:focus:after {
                 background-color: rgba($color-rose,0.5);
