--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -23,11 +23,6 @@
                 min-height: 300px;
                 max-height: 600px;
                 transition: ease-out 0.5s;
-                p {
-                        display: table-cell;
-                        position: relative;
-                        vertical-align: middle;
-                }
         }
         .program:after {
 	        content: '';
@@ -36,7 +31,7 @@
 	        left: 0;
 	        height: 100%;
 	        width: 100%;
-		margin-top: 50%
+		margin-top: 50%;
                         font-family: Lato;
                         font-weight: 900;
                         font-size: 2em;
