--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -15,15 +15,29 @@
                 @include animation(fade-in ease-in-out 1s 1s both);
                 position: relative;
                 display: table;
+                background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/finger-in-mouth-940x600px.jpg);
+	        background-size: cover;
+	        background-repeat: no-repeat;
+	        background-position:    50%;
 		margin: 1em auto;
-		text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
-		text-transform: uppercase;
                 width: 100%;
                 max-width: 960px;
                 min-height: 300px;
                 max-height: 600px;
+                color: $color-light;
+                font-family: Lato;
+                font-weight: 900;
+                font-size: 2em;
+                text-align: center;
+		text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+		text-transform: uppercase;
                 transition: ease-out 0.5s;
         }
+	.program:hover {
+                p {
+                        @include animation(rubber-band ease-in-out 1s);
+                }
+	}
         .program:after {
 	        content: '';
 	        position: absolute;
@@ -31,31 +45,15 @@
 	        left: 0;
 	        height: 100%;
 	        width: 100%;
-		margin-top: 50%;
-                        font-family: Lato;
-                        font-weight: 900;
-                        font-size: 2em;
-                        text-align: center;
-                        color: $color-light;
                 border: 1px solid $color-dark;
                 background-image: linear-gradient(180deg,hsla(0,0%,100%,0) 0, rgba($color-rose, 0.5));
 	        z-index: 0;
         }
         .program:hover:after, .discover:focus:after {
-                background-color: rgba($color-rose,0.5);
-                border: 1px solid $color-grey;
-                color: $color-light;
-                p {
-                        @include animation(rubber-band ease-in-out 1s);
-                }
+                background-color: rgba($color-rose,0.4);
         }
 
         .discover {
-		position: relative;
-                background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/finger-in-mouth-940x600px.jpg);
-	        background-size: cover;
-	        background-repeat: no-repeat;
-	        background-position:    50%;
 	}
 
 
