--- a/assets/styles/partials/_mixins.scss
+++ b/assets/styles/partials/_mixins.scss
@@ -46,3 +46,49 @@
 	}
 }
 
+@mixin programs($bgImage: https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/finger-in-mouth-940x600px.jpg, $overlayColor: $color-rose) {
+                @include animation(fade-in ease-in-out 1s 1s both);
+                position: relative;
+                display: table;
+                background-image: url($bgImage);
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position:    50%;
+                margin: 1em auto;
+                width: 100%;
+                max-width: 960px;
+                min-height: 300px;
+                max-height: 600px;
+                p {
+                        display: table-cell;
+                        position: relative;
+                        vertical-align: middle;
+                        font-family: Lato;
+                        font-weight: 900;
+                        font-size: 2em;
+                        text-align: center;
+                        text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+                        text-transform: uppercase;
+                        color: $color-light;
+                 }
+                transition: ease-out 0.5s;
+        &:hover {
+                p {
+                        @include animation(rubber-band ease-in-out 1s);
+                }
+        }
+        &:after {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                border: 1px solid $color-dark;
+                background-image: linear-gradient(180deg,hsla(0,0%,100%,0) 0, rgba($overlayColor, 0.5));
+                z-index: 0;
+        }
+        &:hover:after, &:focus:after {
+                background-color: rgba($overlayColor,0.4);
+        }
+}
