--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -10,20 +10,20 @@
 	p { text-align: center; color: $color-grey; }
 
 	.row { margin: 2em 0 }
-	
+
         .discover {
-		@include programs($color-dark, $color-rose);
+		@include programs($program-1, $color-rose);
         }
 	
         .develop {
-		@include programs(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/african-blue-940x600px.jpg, $color-rose);
+		@include programs($program-2, $color-rose);
         }
 	
         .deliver {
-		@include programs(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/two-grills-940x600px.jpg, $color-rose);
+		@include programs($program-3, $color-rose);
         }
 	
         .sustain {
-		@include programs(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/take-a-shot-940x600px.jpg, $color-rose);
+		@include programs($program-4, $color-rose);
         }
 }
