--- a/assets/styles/partials/_config.scss
+++ b/assets/styles/partials/_config.scss
@@ -32,3 +32,11 @@ $color-dark-alpha: rgba(17,17,17,0.8);
 $color-blue-alpha: rgba(31,58,140,0.8);
 $color-grey-alpha: rgba(59,59,59,0.5);
 $color-orange-alpha: rgba(255,102,0,0.9);
+
+/*----------------------------------------------   
+--URLs
+-----------------------------------------------  */
+$program-1: https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/finger-in-mouth-940x600px.jpg
+$program-2: https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/take-a-shot-940x600px.jpg
+$program-3: https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/two-grills-940x600px.jpg
+$program-4: https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/take-a-shot-940x600px.jpg
