--- a/assets/styles/partials/_config.scss
+++ b/assets/styles/partials/_config.scss
@@ -36,7 +36,7 @@ $color-orange-alpha: rgba(255,102,0,0.9);
 /*----------------------------------------------   
 --URLs
 -----------------------------------------------  */
-$program-1: https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/finger-in-mouth-940x600px.jpg
-$program-2: https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/take-a-shot-940x600px.jpg
-$program-3: https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/two-grills-940x600px.jpg
-$program-4: https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/take-a-shot-940x600px.jpg
+$program-1: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/finger-in-mouth-940x600px.jpg");
+$program-2: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/take-a-shot-940x600px.jpg");
+$program-3: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/two-grills-940x600px.jpg");
+$program-4: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/take-a-shot-940x600px.jpg");
