--- a/assets/styles/partials/_mixins.scss
+++ b/assets/styles/partials/_mixins.scss
@@ -85,10 +85,10 @@
                 height: 100%;
                 width: 100%;
                 border: 1px solid $color-dark;
-                background-image: linear-gradient(180deg,hsla(0,0%,100%,0) 0, rgba($overlayColor, 0.5));
+                background-image: linear-gradient(180deg, rgba($overlayColor, 0.25) 0%, hsla(0,0%,100%,0) 50%, rgba($overlayColor, 0.25) 100%);
                 z-index: 0;
         }
         &:hover:after, &:focus:after {
-                background-color: rgba($overlayColor,0.4);
+                background-color: rgba($overlayColor,0.25);
         }
 }
