--- a/assets/styles/partials/_mixins.scss
+++ b/assets/styles/partials/_mixins.scss
@@ -74,7 +74,7 @@
                 transition: ease-out 0.5s;
         &:hover {
                 p {
-                        @include animation(fade-out ease-out 2s 0.5s);
+                        @include animation(fade-out ease-out 2s 0.5s forwards);
                 }
         }
         &:after {
@@ -85,7 +85,7 @@
                 height: 100%;
                 width: 100%;
                 border: 1px solid $color-dark;
-                background-image: linear-gradient(180deg, rgba($overlayColor, 0.45) 0%, hsla(0,0%,100%,0) 50%, rgba($overlayColor, 0.45) 100%);
+                background-image: linear-gradient(180deg, rgba($overlayColor, 0.45) 0%, rgba($color-dark, 0.25) 50%, rgba($overlayColor, 0.45) 100%);
                 z-index: 0;
         }
         &:hover:after, &:focus:after {
