--- a/assets/styles/partials/_mixins.scss
+++ b/assets/styles/partials/_mixins.scss
@@ -74,7 +74,7 @@
                 transition: ease-out 0.5s;
         &:hover {
                 p {
-                        @include animation(fade-out ease-out 2s 0.5s forwards);
+                        @include animation(fade-out ease-out 1s 0.5s forwards);
                 }
         }
         &:after {
@@ -87,6 +87,7 @@
                 border: 1px solid $color-dark;
                 background-image: linear-gradient(180deg, rgba($overlayColor, 0.45) 0%, rgba($color-dark, 0.25) 50%, rgba($overlayColor, 0.45) 100%);
                 z-index: 0;
+                transition: ease-out 1.5s;
         }
         &:hover:after, &:focus:after {
                 background-color: rgba($overlayColor,0.25);
