add about ivi snippet

--- a/assets/styles/partials/_about.scss
+++ b/assets/styles/partials/_about.scss
@@ -26,4 +26,21 @@
         .sustain {
 		@include programs($program-4, $color-yellow);
         }
+	.clear-button {
+	                margin: 1em auto;
+	                border: 1px solid $color-dark;
+	                border-radius: 1px;
+	                background-color: transparent;
+	                font-family: Lato;
+	                text-align: center;
+	                color: $color-dark;
+	                transition: ease-out 0.5s;
+	                width: 10em;
+	                height: 2em;
+	}
+	.clear-button:hover {
+	                background-color: $color-yellow;
+	                border: 1px solid $color-dark;
+	                color: $color-dark;
+	}
 }
