--- a/assets/styles/partials/_introduction.scss
+++ b/assets/styles/partials/_introduction.scss
@@ -2,82 +2,7 @@
 --Introduction
 -----------------------------------------------  */
 
-.organization-summary {
-	margin: 2em 0;
-
-	img:hover {
-		@include animation(rubber-band ease-in-out 3s);
-	}	
+.section-introduction {
+	background-image: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/ivi-header-blue-2000x1136.jpg");
+	background-attachment: fixed;
 }
-
-h1 {
-	font-size: calc(1.75em + 50%);
-	@include animation(fade-in ease-in-out 2s 0.5s both);
-}
-
-.introduction-image {
-	padding: 1em 0;
-	position: relative;
-	display: table-cell;
-	vertical-align: middle;
-	width: 250px;
-	opacity: 1;
-}
-
-.introduction-title {
-	margin: 0;
-	padding-bottom: 1em;
-	h1 { color: $color-dark; }
-}
-
-.introduction-line {
-	margin: 0;
-	padding-bottom: 1em;
-}
-
-.introduction-text {
-	margin: 0;
-	padding-bottom: 1em;
-}
-
-/* COLORED BORDERS AND LINES */
-.colored-line {
-	@include animation(stretch-line ease-out 1s 0.5s forwards);
-	background: $color-orange;
-	margin: 0;
-	padding: 0;
-	height: 2px;
-	text-align: center;
-	text-shadow:-2px 2px 0px rgba(0,0,0,0.3),-3px 3px 1px rgba(0,0,0,0.5),-4px 4px 2px rgba(0,0,0,0.2);
-}
-
-.organization-story {
-	padding: 4em 2em;
-	border-top: 2px solid $color-orange;
-	background-color: $color-grey;
-	color: $color-light;
-}
-
-.organization-story .yellow-button {
-        border: 1px solid $color-light;
-        color: $color-light;
-}
-
-.yellow-button {
-                margin: 1em auto;
-                border: 1px solid $color-dark;
-                border-radius: 1px;
-                background-color: transparent;
-                font-family: Lato;
-                text-align: center;
-                color: $color-dark;
-                transition: ease-out 0.5s;
-                width: 10em;
-                height: 2em;
-}
-.yellow-button:hover {
-                background-color: $color-yellow;
-		border: 1px solid $color-dark;
-                color: $color-dark;
-}
-
