--- a/assets/styles/partials/_introduction.scss
+++ b/assets/styles/partials/_introduction.scss
@@ -7,6 +7,8 @@
 	background-attachment: fixed;
 	.featured {
 		background-color: #ff6600; 
+		margin: 25vh auto;
 		padding: 50px 0;
+		width: 80%;
 	}
 }
