--- a/assets/styles/partials/_introduction.scss
+++ b/assets/styles/partials/_introduction.scss
@@ -11,11 +11,15 @@
 		padding: 50px 0;
 		width: 80%;
 		text-align: center;
-		h2 {
+		text-decoration: none;
+		text-transform: uppercase;
+		h1 {
 			text-color: $color-light;
+			margin: 2em 0;
 		}
-		h5 {
+		h3 {
 			text-color: $color-grey;
+			margin: 1em 0;
 		}
 	}
 }
