--- a/assets/styles/partials/_introduction.scss
+++ b/assets/styles/partials/_introduction.scss
@@ -12,6 +12,7 @@
 		text-align: center;
 		text-decoration: none;
 		text-transform: uppercase;
+		width: 100%;
 		h1 {
 			text-color: $color-light;
 			margin: 2em 0;
