--- a/assets/styles/partials/_introduction.scss
+++ b/assets/styles/partials/_introduction.scss
@@ -16,7 +16,7 @@
 		text-transform: uppercase;
 		width: 100%;
 		margin: 0 auto;
-		h2.featured {
+		h2 {
 			font-size: font-size: calc(1.5em + 25%);
 			font-family: playfair display,georgia,times,serif;
 			text-color: $color-light;
