--- a/assets/styles/partials/_introduction.scss
+++ b/assets/styles/partials/_introduction.scss
@@ -8,25 +8,25 @@
 	.row {
 		margin: 25vh auto;
 		.featured {
-			background-color: $color-yellow; 
-			padding: 50px 0;
+			background-color: $color-orange; 
+			padding: 3em 0;
 			text-align: center;
 			text-decoration: none;
 			text-transform: uppercase;
 			width: 100%;
-			margin: 0 auto;
+			margin: 1em auto;
 			h2 {
-				font-size: calc(1.5em + 25%);
+				font-size: calc(1.0em + 50%);
 				font-family: playfair display,georgia,times,serif;
-				text-color: $color-light;
+				color: $color-light;
 				margin: 2em 0;
 			}
 			.sections {
-				border: 1px $color-yellow solid;
+				border: 1px $color-orange solid;
 				background-color: $color-light; 
 				color: $color-grey;
 				h4 {
-					text-color: $color-grey;
+					color: $color-grey;
 					margin: 1em 0;
 				}
 			}
