--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -27,7 +27,6 @@
 @import 'partials/_about';
 @import 'partials/_introduction';
 @import 'partials/_sponsors';
-@import 'partials/_artists';
-@import 'partials/_portfolios';
+@import 'partials/_contact';
 @import 'partials/_footer';
 @import 'partials/_animations';
