--- a/assets/styles/partials/_contact.scss
+++ b/assets/styles/partials/_contact.scss
@@ -44,6 +44,11 @@
 		li {
 			@include bg-abs;
 			@include animation(slide-out 27s linear infinite);
+			background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/whiteheads-800x1200px.jpeg);
+			background-attachment: fixed;
+			@media (min-width: $mq-med) {
+				background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/whiteheads-2000x1350px.jpeg);
+			}
 		}
 	 	li:nth-child(2) {
 			background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/trapped-800x1200px.jpeg);
