testing new layout

--- a/assets/styles/partials/_contact.scss
+++ b/assets/styles/partials/_contact.scss
@@ -1,4 +1,8 @@
-.section-artists {
+/*----------------------------------------------
+--Contact
+-----------------------------------------------  */
+
+.section-contact {
 	position: relative;
 	display: table;
 	border-top: 2px solid $color-orange;
