--- a/assets/styles/partials/_contact.scss
+++ b/assets/styles/partials/_contact.scss
@@ -48,10 +48,10 @@
 		li {
 			@include bg-abs;
 			@include animation(slide-out 27s linear infinite);
-			background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/whiteheads-800x1200px.jpeg);
+			background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/brownbuddies-836x557px.jpg);
 			background-attachment: fixed;
 			@media (min-width: $mq-med) {
-				background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/whiteheads-2000x1350px.jpeg);
+				background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/brownbuddies-836x557px.jpg);
 			}
 		}
 	 	li:nth-child(2) {
