--- a/assets/styles/partials/_config.scss
+++ b/assets/styles/partials/_config.scss
@@ -40,3 +40,6 @@ $program-1: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-i
 $program-2: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/african-blue-940x600px.jpg");
 $program-3: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/two-grills-940x600px.jpg");
 $program-4: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/take-a-shot-940x600px.jpg");
+$geese-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/geese-1903×400px.jpg");
+$office-p: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/ivi-hq-800x1200px.png");
+
