--- a/assets/styles/partials/_footer.scss
+++ b/assets/styles/partials/_footer.scss
@@ -58,28 +58,29 @@
 		font-weight: 100;
 	}
  	ul.keyframe-slider {
-		li {
-			@include bg-abs;
-			opacity: 0;
-			@include animation(fade-out 90s infinite both);
-			background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/whiteheads-800x1200px.jpeg);
-			@media (min-width: $mq-med) {
-				background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/whiteheads-2000x1350px.jpeg);
-			}
-		}
-	 	li:nth-child(2) {
-			background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/trapped-800x1200px.jpeg);
-			@include animation-delay(60s);
-			@media (min-width: $mq-med) {
-				background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/mossheads-2000x1350px.jpeg);
-			}
-		}
-		li:nth-child(3) {
-			background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/whitesquare-800x1200px.jpeg);
-			@include animation-delay(30s);
-			@media (min-width: $mq-med) {
-				background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/crystalcubes-2000x1350px.jpeg);
-			}
-		}
+                li {
+                        @include bg-abs;
+                        background-attachment: fixed;
+                        opacity: 0;
+                        @include animation(fade-out 27s infinite both);
+                        background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/flowers-800x1200px.png);
+                        @media (min-width: $mq-med) {
+                                background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/flowers-1480x900px.jpg);
+                        }
+                }
+                li:nth-child(2) {
+                        background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/ball-800x1200px.png);
+                        @include animation-delay(18s);
+                        @media (min-width: $mq-med) {
+                                background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/ball-1480x900px.jpg);
+                        }
+                }
+                li:nth-child(3) {
+                        background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/water-800x1200px.png);
+                        @include animation-delay(9s);
+                        @media (min-width: $mq-med) {
+                                background-image: url(https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/water-1480x900px.jpg);
+                        }
+                }
 	}
 }
