--- a/assets/styles/partials/_config.scss
+++ b/assets/styles/partials/_config.scss
@@ -42,4 +42,8 @@ $program-3: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-i
 $program-4: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/take-a-shot-940x600px.jpg");
 $geese-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/geese-1903×400px.jpg");
 $office-p: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/ivi-hq-800x1200px.png");
-
+$office-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/ivi-hq-2000x1350px.jpeg");
+$watchers-p: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/watchers-1600x2400px.jpeg");
+$watchers-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/watchers-2000x1350px.jpeg");
+$vaccination-p: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/vaccination-juice-800x1200px.jpeg");
+$vaccination-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/vaccination-juice-2000x1350px.jpeg");
