--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -21,6 +21,62 @@
 	text-decoration: none;
 	text-shadow:-2px 2px 0px rgba(0,0,0,0.3),-3px 3px 1px rgba(0,0,0,0.5),-4px 4px 2px rgba(0,0,0,0.2);
 	
+
+.search-bar-wrapper {
+  margin-right: -80px;
+  margin-left: -80px;
+  padding-top: 40px;
+  padding-right: 40px;
+  padding-bottom: 80px;
+  background-image: -webkit-linear-gradient(270deg, rgba(0, 0, 0, .6), transparent 87%);
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, .6), transparent 87%);
+}
+
+.search-bar-wrapper.no-grad {
+  padding-bottom: 30px;
+  background-color: #00acd7;
+  background-image: none;
+}
+
+.search-input {
+  display: block;
+  width: 450px;
+  margin-bottom: 0px;
+  padding-left: 20px;
+  float: left;
+  border-style: solid;
+  border-width: 1px;
+  border-color: hsla(0, 0%, 100%, .6);
+  border-radius: 10px;
+  background-color: transparent;
+  -webkit-transition: background-color 350ms ease;
+  transition: background-color 350ms ease;
+  color: #fff;
+}
+
+.search-input:focus {
+  border-color: #fff;
+  background-color: hsla(0, 0%, 100%, .8);
+  color: #000;
+}
+
+.search-icn {
+  display: inline-block;
+  width: 40px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  -webkit-transition: color 350ms ease;
+  transition: color 350ms ease;
+  font-family: Fontawesome, sans-serif;
+  color: hsla(0, 0%, 100%, .8);
+  text-align: center;
+  text-decoration: none;
+}
+
+.search-icn:hover {
+  color: #fff;
+}
+
 	.row {
 		width: 100%;
 		max-width: 940px;
